<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_control"
            android:title="@string/menu_on_off_device" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_usage"
            android:title="@string/menu_usage_limitation" />
        <item
            android:id="@+id/nav_help_support"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/menu_help_support" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_logout" />

    </group>
</menu>
