<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:weightSum="4"
    android:background="#ffffff"
    tools:context=".LoginActivity">
<!--    <LinearLayout-->

<!--        android:layout_weight="1"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp">-->

<!--    </LinearLayout>-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="2.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:textStyle="bold"
            android:textSize="45sp"
            android:text="@string/login_title"
            android:id="@+id/login_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_gravity="center_horizontal"
            android:src="@drawable/icon_app"
            android:layout_width="128dp"
            android:layout_height="128dp"/>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:padding="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/style_edittext"
                android:id="@+id/login_EditText_user"
                android:hint="@string/login_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:padding="20dp"
                android:background="@drawable/style_edittext"
                android:id="@+id/login_EditText_password"
                android:inputType="textPassword"
                android:hint="@string/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_weight="1.5"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:padding="10dp"
            android:textColor="#ffffff"
            android:background="@drawable/style_button"
            android:textSize="25sp"
            android:onClick="onClick"
            android:id="@+id/login_SignIn"
            android:text="@string/login_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="20dp"
            android:onClick="onClick"
            android:id="@+id/login_forgetPassword"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/login_SignIn"
            android:text="@string/login_forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginBottom="10dp"
            android:layout_above="@id/login_Register"
            android:layout_centerHorizontal="true"
            android:text="@string/login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:textAllCaps="false"
            android:textColor="#6B6B6B"
            android:padding="10dp"
            android:textSize="25sp"
            android:background="@drawable/style_button_register"
            android:onClick="onClick"
            android:id="@+id/login_Register"
            android:text="@string/login_register"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>