<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:weightSum="5"
    android:background="#ffffff"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_weight="4"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <TextView
            android:textStyle="bold"
            android:textSize="45sp"
            android:text="@string/register_title"
            android:id="@+id/login_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/TextView"
                android:text="@string/register_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:inputType="text"
                android:id="@+id/register_editText_username"
                style="@style/TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/TextView"
                android:text="@string/register_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/register_editText_email"
                style="@style/TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/TextView"
                android:text="@string/register_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:inputType="textPassword"
                android:id="@+id/register_editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/TextView"
                android:text="@string/register_confirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:inputType="textPassword"
                android:id="@+id/register_editText_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                style="@style/TextView"
                android:text="@string/register_deviceID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:inputType="text"
                android:id="@+id/register_editText_deviceID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:padding="10dp"
            android:textColor="#ffffff"
            android:background="@drawable/style_button"
            android:textSize="25sp"
            android:id="@+id/login_SignIn"
            android:text="@string/register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_margin="5dp"
                android:text="@string/register_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:onClick="click"
                android:id="@+id/register_textView_Login"
                android:textColor="@color/colorPrimary"
                android:layout_margin="5dp"
                android:text="@string/login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>